--- a/app/views/portvolios/_portfolio_item.html.erb
+++ b/app/views/portvolios/_portfolio_item.html.erb
@@ -1,7 +1,7 @@
 <div class="col-md-4">
   <div class="card mb-4 shadow-sm">
     <%= image_tag portfolio_item.thumb_image if portfolio_item.thumb_image %>
-    <div class="card-body">
+    <div class="card-body", data-id="<%= portfolio_item.id %>">
       <p class="card-text">
         <span><%= link_to portfolio_item.title, portfolio_item %></span>
         <%= portfolio_item.subtitle %>
